really fixes the alignment issue this time......

--- a/src/campaign/sass/components/_section.scss
+++ b/src/campaign/sass/components/_section.scss
@@ -48,7 +48,7 @@
   @include media-query($from: tablet) {
     left: -60px;
     border-width: 50px 0px 0px 1440px;
-    bottom: -10px;
+    bottom: -108px;
   }
 }
 
